adding query to return a random assortment of appetizers
